# nano

./: .gitignore  NEWS  README.MD  configure.ac
doc/man/: nano.1  nanorc.5  rnano.1
doc/syntax/: .scss.nanorc  Makefile.am
src/: files.c  global.c  nano.c  nano.h  prompt.c  proto.h  rcfile.c  text.c  winio.c
